--- a/.gitignore
+++ b/.gitignore
@@ -1,48 +1,23 @@
-# Compiled class files
-*.class
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Log files
-*.log
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# BlueJ files
-*.ctxt
+# testing
+/coverage
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# production
+/build
 
-# Package Files
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs
-hs_err_pid*
-replay_pid*
-
-# IDE-specific files
-.idea/
-*.iml
-.vscode/
-.project
-.classpath
-.settings/
-
-# Maven
-target/
-.mvn/
-mvnw
-mvnw.cmd
-
-# Application specific
-application-local.yml
-application-dev.yml
-application-prod.yml
-.env
-
-# OS specific
+# misc
 .DS_Store
-Thumbs.db 
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
