--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -1,10 +1,10 @@
 [build]
 builder = "DOCKERFILE"
-dockerfilePath = "./Dockerfile"
+dockerfilePath = "./backend/Dockerfile"
 
 [deploy]
 startCommand = "java -jar app.jar"
 healthcheckPath = "/api/actuator/health"
-healthcheckTimeout = 100
+healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3 
