--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,13 @@
 # Build stage
-FROM maven:3.8.5-openjdk-17-slim AS build
+FROM eclipse-temurin:17-jdk-alpine AS build
 WORKDIR /app
-COPY pom.xml .
-COPY src ./src
-RUN mvn clean package -DskipTests
+COPY backend/pom.xml .
+COPY backend/src ./src
+RUN apk add --no-cache maven && \
+    mvn clean package -DskipTests
 
 # Run stage
-FROM openjdk:17-slim
+FROM eclipse-temurin:17-jre-alpine
 WORKDIR /app
 COPY --from=build /app/target/*.jar app.jar
 EXPOSE 8080
